Fixed the css file overlapping on the homescreen jsx. Created a div class for ChatUI.css and re worked so file orders in to a new folder that contain the main files. x

--- a/src/Links/ChatUI.css
+++ b/src/Links/ChatUI.css
@@ -1,4 +1,5 @@
-div{
+
+div.chat{
     display: flex;
     text-align: center;
     /*align-items: center;*/
